task : footer added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         body{
             background-color: #f1e1dd;
         }
+        .fa-instagram {
+            color: #30475E;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+        .fa-linkedin{
+            color: #30475E;
+            margin-right: 10px;
+
+        }
+        .fa-github{
+            color: #30475E;
+
+        }
         .navbar-nav > li > .dropdown-menu { background-color: #f1e1dd; }
 
         .navbar {
@@ -267,17 +281,9 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                 <h5 class="text-uppercase">Ilayda Turkmen</h5>
-                <ul class="list-unstyled mb-0">
-                    <li>
-                        <i class="fab fa-github-square"></i>: <a href="https://github.com/ilaydaturkmen" class="text-dark">GitHub Repository</a>
-                    </li>
-                    <li>
-                        <i class="fab fa-linkedin"></i>: <a href="http://www.linkedin.com/in/ilayda-turkmen-8532831b6" class="text-dark">LinkedIn</a>
-                    </li>
-                    <li>
-                        <i class="fab fa-instagram-square"></i>: <a href="https://www.instagram.com/" class="text-dark">Instagram</a>
-                    </li>
-                </ul>
+                <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+                <a href="https://www.linkedin.com/in/ilayda-turkmen-8532831b6" class="fa fa-linkedin"></a>
+                <a href="https://github.com/ilaydaturkmen" class="fa fa-github"></a>
             </div>
         </div>
     </div>
